# gam

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.c
src/gam/: CMakeLists.txt  gam.c  gam.h  gam_defs.h
src/gam/frontend/: CMakeLists.txt  ap_map.c  ap_map.h  background.c  background.h  frontend.c  frontend.h
src/gam/interface/: frontend.c  frontend.h
src/graphics/: CMakeLists.txt  cairo_mt.c  cairo_mt.h  gl_pbo.c  gl_pbo.h  window.c  window.h
src/parsers/: CMakeLists.txt  apt_dat.c  apt_dat.h  scenery_packs.c  scenery_packs.h
src/parsers/apt_dat/: CMakeLists.txt
src/utils/: CMakeLists.txt  constants.h  hex_to_rgb.h  log.c  log.h  path_hdlr.c  path_hdlr.h  ts_queue.c  ts_queue.h  utils.c  utils.h  vec.c  vec.h
src/utils/cairo/: round_rect.h
